--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -7,7 +7,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 2;
+  z-index: 5;
   cursor: none;
   display: flex;
   flex-direction: column;
@@ -49,16 +49,17 @@
       width: 69vw;
       left: 12vw;
       top: -17vw;
+
+      
     }
     .guide-content {
       width: 93%;
-      overflow-y: auto;
-      height: 158vw;
+      height: 110vw;
       position: relative;
       left: 3vw;
-      position: absolute;
       top: 8vw;
       color: white;
+      overflow-y: auto;
       // border: 1px solid;
 
       .guide-gifts {
@@ -74,29 +75,39 @@
         left: 2vw;
 
         .gift-title {
-          font-size: 4vw;
+          // font-size: 4vw;
+          // font-family: "EvilEmpire";
+          // color: white;
+
+          font-size: 6vw;
           font-family: "EvilEmpire";
           color: white;
+          position: relative;
+          top: -5vw;
+      
         }
         .gifts-container {
           display: flex;
           width: 95%;
         }
       }
-
+      .howTitle {
+        font-size: 5vw;
+        font-family: "EvilEmpire";
+        text-align: center;
+      }
       .howToPlaySec {
         position: relative;
         // min-height: 20vw;
         // border: 1px solid red;
-        .howTitle {
-          font-size: 5vw;
-          font-family: "EvilEmpire";
-          text-align: center;
-        }
+        // height: 74vw;
+        // overflow-y: auto;
+
         .acc-section {
           display: flex;
           flex-direction: column;
           gap: 16vw;
+          margin-top: 3vw;
         }
         .event-gft-cont {
           // border: 1px solid;
@@ -510,7 +521,7 @@
         }
 
         .tal-rec-rows {
-          height: 22vw;
+          // height: 22vw;
         }
       }
     }
@@ -624,12 +635,17 @@
       // border: 1px solid;
       width: 90%;
       left: 3vw;
-
+      .no-rews{
+        position: relative;
+        top: 14vw;
+      }
       .success {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+
+ 
         .p1 {
           font-size: 4vw;
           width: 80%;
@@ -739,6 +755,10 @@
           position: relative;
           top: 11vw;
           font-size: 4vw;
+
+          margin-left: 1vw;
+          margin-right: 1vw;
+          
         }
       }
 
