--- a/src/styles/lucky-player.scss
+++ b/src/styles/lucky-player.scss
@@ -100,9 +100,9 @@
         font-weight: bold;
 
         background-image: linear-gradient(to right, #c98473, #f9e346);
-    -webkit-background-clip: text;
-    color: transparent;
-    display: inline;
+        -webkit-background-clip: text;
+        color: transparent;
+        display: inline;
       }
     }
 
@@ -124,6 +124,7 @@
       background-image: url(../assets/images/lucky/scratch-btn.png);
       position: relative;
       // top: 24vw;
+      z-index: 4;
     }
     .scratch-rem {
       background-image: url(../assets/images/battle/battles-won-bar.png);
@@ -149,36 +150,37 @@
 
   .my-lucky-numbers-wrap {
     background-image: url(../assets/images/lucky/lucky-number-bg.png);
-    min-height: 281vw;
+    // min-height: 281vw;
     position: relative;
     width: 95%;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     margin: 15vw auto 0;
 
-    .title {
-      left: 12vw;
+    .main-title {
       width: 71vw;
-      position: absolute;
+      position: relative;
       top: -17vw;
       color: white;
+  
     }
 
-    .rest-divs {
-      position: relative;
-      top: 72vw;
+ 
       .special-rewards {
-        position: absolute;
         left: 0;
         right: 0;
         margin: 0 auto;
-        .title {
+        position: relative;
+        top: -22vw;
+        .spec-title {
           width: 60%;
-          left: 20vw;
+          // left: 20vw;
+          position: relative;
+          top: 2vw;
         }
 
         .rewards-div {
-          margin-top: 6vw;
+          // margin-top: 6vw;
           .reward-item {
             width: 24vw;
             height: 26vw;
@@ -203,23 +205,26 @@
       }
 
       .lucky-numbers-appear-wrap {
-        position: absolute;
         margin: 0 auto;
         left: 0;
         right: 0;
-        top: 43vw;
+        top: -16vw;
+        position: relative;
+       
         .tabs {
           gap: 3vw;
         }
         .lucky-number-appear {
           width: 70%;
-          min-height: 48vw;
-          background-image: url("../assets/images/battle/lb-bg.png");
+          min-height: 55vw;
+          background-image: url("../assets/images/event-gifting/reward-bg.png");
           background-size: 100% 100%;
-          position: absolute;
+          // position: absolute;
           left: 0;
           right: 0;
           margin: 0 auto;
+          
+         padding-top: 5vw;
 
           p {
             font-size: 3vw;
@@ -246,72 +251,13 @@
           }
         }
       }
-
-      .last-lucky-winners {
-        background-image: url(../assets/images//lucky/last-lucky-winner-bg.png);
-
-        min-height: 60vw;
-
-        position: relative;
-        width: 89%;
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        top: 65vw;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        padding-bottom: 5vw;
-
-        .title {
-          width: 82%;
-          position: absolute;
-          left: 8vw;
-          top: -17vw;
-        }
-        p {
-          font-family: "PoppinsMediumItalic";
-          color: white;
-          font-size: 4vw;
-        }
-        .mascot-img {
-          width: 30vw;
-        }
-
-        .last-lucky-rest-wins {
-          margin-top: 9vw;
-          overflow: hidden;
-          height: 151vw;
-        }
-
-        .last-lucky-rest-wins::-webkit-scrollbar {
-          width: 1vw;
-          background-color: gray;
-        }
-
-        /* Track */
-        .last-lucky-rest-wins::-webkit-scrollbar-track {
-          box-shadow: inset 0 0 5px grey;
-          border-radius: 1vw;
-        }
-
-        /* Handle */
-        .last-lucky-rest-wins::-webkit-scrollbar-thumb {
-          background: white;
-          border-radius: 2vw;
-        }
-
-        /* Handle on hover */
-        .last-lucky-rest-wins::-webkit-scrollbar-thumb:hover {
-          background: #b30000;
-        }
-      }
-    }
+    
 
     .not-scratched {
-      position: absolute;
+      position: relative;
       left: 0;
       right: 0;
-      top: 7vw;
+      top: -21vw;
       p {
         font-family: "PoppinsMediumItalic";
         color: white;
@@ -319,6 +265,10 @@
         margin: 0 auto;
         font-size: 3.5vw;
       }
+    }
+    .scratched{
+      position: relative;
+      top: -22vw;
     }
 
     .numbers-container {
@@ -330,7 +280,68 @@
       align-items: center;
       gap: 2vw;
       margin: 0 auto;
+      // height: 41vw;
+      // overflow-y: auto;
     }
+  }
+
+  .last-lucky-winners {
+    background-image: url(../assets/images//lucky/last-lucky-winner-bg.png);
+
+    // min-height: 60vw;
+
+    // position: relative;
+    width: 89%;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
+    margin: 0 auto;
+    // padding-bottom: 5vw;
+    margin-top: 17vw;
+
+    .seeMore{
+      position: relative;
+      top: -10vw;
+    }
+
+    .title {
+      width: 82%;
+      position: relative;
+      // left: 8vw;
+      top: -17vw;
+    }
+
+    .no-winners{
+      position: relative;
+      top: -21vw;
+      p {
+        font-family: "PoppinsMediumItalic";
+        color: white;
+        font-size: 4vw;
+        width: 80%;
+        margin: 0 auto;
+    
+      }
+      .mascot-img {
+        width: 30vw;
+      }
+
+    }
+
+
+    .last-lucky-rest-wins {
+      // margin-top: 9vw;
+      overflow: hidden;
+      // height: 151vw;
+
+     height: 151vw; 
+    position: relative;
+    top: -16vw;
+
+
+    }
+
+
   }
 
   .last-winner-scratched {
