--- a/src/styles/record-reward-item.scss
+++ b/src/styles/record-reward-item.scss
@@ -1,6 +1,6 @@
 .record-rewards-item {
     width: 16vw;
-    height: 10vw;
+    // height: 10vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
