--- a/src/styles/reward-item.scss
+++ b/src/styles/reward-item.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 10vw;
     .giftImg {
       width: 9vw;
     }
