--- a/src/styles/accordion.scss
+++ b/src/styles/accordion.scss
@@ -48,13 +48,15 @@
     position: relative;
     z-index: 0;
     bottom: 1vw;
+    width: 50vw;
+    left: -2vw;
     font-family: "PoppinsMedium";
     color: black;
     font-size: 2vw;
     .body-item {
       display: flex;
 
-      height: 40vw;
+      // height: 40vw;
       // border: 1px solid;
       // background-color: #b39bec;
       overflow: auto;
@@ -63,7 +65,7 @@
       margin: 0 auto;
       padding-top: 2vw;
       flex-direction: column;
-      padding: 6vw 4vw 2vw 4vw;
+      padding: 5vw 1vw 1vw 0;
       position: relative;
       top: 3vw;
       // border: 1vw solid #fef0c4;
@@ -71,6 +73,24 @@
       background-image: url(../assets/images/guide/rectangle-5.png);
       background-size: 100% 100%;
       // background-repeat: no-repeat;
+
+
+
+     .list-div{
+      margin-bottom: 1vw;
+      height: 40vw;
+      overflow-y: auto;
+      padding-left: 4vw;
+      width: 95%;
+      /* margin: 0 auto; */
+      margin-left: auto;
+    margin-right: auto;
+
+     }
+
+     .gifting-list-div{
+      
+     }
 
 
   
