--- a/src/styles/game-lb-item.scss
+++ b/src/styles/game-lb-item.scss
@@ -19,7 +19,7 @@
     display: flex;
     // justify-content: center;
     align-items: center;
-    gap: 2vw;
+    // gap: 2vw;
 
     .index {
       font-family: "HiJack";
@@ -46,7 +46,7 @@
       flex-direction: column;
       font-family: "Helvetica";
       position: relative;
-      left: -1.5vw;
+      // left: -1.5vw;
       font-size: 2.5vw;
       .name {
         font-size: 2.7vw;
