--- a/src/styles/lucky-player.scss
+++ b/src/styles/lucky-player.scss
@@ -171,7 +171,7 @@
         right: 0;
         margin: 0 auto;
         position: relative;
-        top: -22vw;
+        top: -20vw;
         .spec-title {
           width: 60%;
           // left: 20vw;
@@ -208,7 +208,7 @@
         margin: 0 auto;
         left: 0;
         right: 0;
-        top: -16vw;
+        top: -12vw;
         position: relative;
        
         .tabs {
@@ -280,6 +280,7 @@
       align-items: center;
       gap: 2vw;
       margin: 0 auto;
+      top: 3vw;
       // height: 41vw;
       // overflow-y: auto;
     }
@@ -333,8 +334,9 @@
       // margin-top: 9vw;
       overflow: hidden;
       // height: 151vw;
+      max-height: 151vw;
 
-     height: 151vw; 
+    //  height: 151vw; 
     position: relative;
     top: -16vw;
 
