--- a/src/styles/topper.scss
+++ b/src/styles/topper.scss
@@ -3,7 +3,7 @@
   // height: 40vw;
   .topper-images {
     position: relative;
-    left: 5vw;
+    left: 6vw;
     top: 0vw;
     .rank {
       left: -2.9vw;
@@ -115,13 +115,13 @@
       }
     }
     .estimatedBeans {
-      width: 100%;
+      width: 24vw;
       display: flex;
       border-radius: 3vw;
       justify-content: center;
       color: white;
       align-items: center;
-      font-size: 2.2vw;
+      font-size: 1.6vw;
       // flex-direction: column;
 
       img {
